p2/config/app1/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-one
  namespace: part-2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app-one 
  template:
    metadata:
      labels:
        app: app-one
    spec:
      containers:
      - name: hello-kubernetes-container
        image: paulbouwer/hello-kubernetes:1.10
        ports:
        - containerPort: 8080
